    - print range, page setup, hidden columns/row, comments
- Added subtotal dialog and formula
- Paper layout can now be applied to all sheets
- now you can define the default cell style


New functions:

Math:
- SUBTOTAL, POWER, TRUNC, CEILING, PRODUCT (now Excel compatible), 
  KPRODUCT, RANDEXP, RANDBINOM, RANDNEGBINOM, RANDBERNOULLI,
  RANDPOISSON, MROUND, COUNTA

Statistical:
- VARP, STDEV, VAR, STDEVP, GEOMEAN, HARMEAN, 
  KURT, LOGINV, DEVSQ, STANDARDIZE, HYPGEOMDIST,
  NEGBINOMDIST, KURTP

Financial:
- PPMT, DDB, DURATION, PMT, NPER, ISPMT, IPMT

Database:
- DAVERAGE, DCOUNT, DCOUNTA, DGET, DMAX, DMIN,
  DPRODUCT, DSTDEV, DSTDEVP, DSUM, DVAR, DVARP

Obsolete formulas 
- stddev (was stddevp in fact)

Obsolete but still usable formulas (do not show up in dialog )
- variance, pow

    
=====================================================    
After 1.2 above
=====================================================


Changes from 1.1 to 1.2
=======================

Since RC1:
----------
Bugfixes:
- Fix display and printout with special files (offset by 1 pixel).
- Fix printout of thick cell borders on page borders
- Fix printout of children, when they overlap one page
- Fix #45967, #31130
- Fix #45944 (Normal): Paste special->text overwrite borders
- Fix #42456 (Normal): merged cells with centered text do not survive insert/delete rows
- Fix #45943 (Crash): crash after "money format"
- Fix function documentation (YEAR(), FACTDOUBLE() )
- Fix parsing and error checking for spreadsheet names.
- Fix #46045 (Normal): serious errors in forumulas
- Fix Embedded chart changes titles when opening again
- Fix #44628 (Grave): 1.1 document not read with 1.2 - circular references
- Fix #40150 (Normal): Precision problem in calculations
- Fix #29524:  KSpread Formula editors tooltip should be changed
- Fix #18083: KSpread rounding error
- Fix #46530: crash on selecting validity
- Fix #45395: Save as HTML is called "mime type"