@@ -27,7 +27,7 @@ New functions:
 Math:
 - SUBTOTAL, POWER, TRUNC, CEILING, PRODUCT (now Excel compatible), 
   KPRODUCT, RANDEXP, RANDBINOM, RANDNEGBINOM, RANDBERNOULLI,
-  RANDPOISSON, MROUND, COUNTA
+  RANDPOISSON, MROUND, COUNTA, MINA, MAXA
 
 Statistical:
 - VARP, STDEV, VAR, STDEVP, GEOMEAN, HARMEAN, 
@@ -40,6 +40,10 @@ Financial:
 Database:
 - DAVERAGE, DCOUNT, DCOUNTA, DGET, DMAX, DMIN,
   DPRODUCT, DSTDEV, DSTDEVP, DSUM, DVAR, DVARP
+
+Reference & Lookup:
+- ADDRESS, AREAS, CHOOSE, COLUMN, COLUMNS, INDIRECT,
+  ROW, ROWS
 
 Obsolete formulas 
 - stddev (was stddevp in fact)
